--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<description>
 		Moodle platform file synchronization from a desktop app.
 	</description>
-	<url>https://github.com/lectureStudio/MoodleSync</url>
+	<url>https://github.com/MoodleSync/sync-app</url>
 
 	<developers>
 		<developer>
@@ -32,13 +32,13 @@
 
 	<issueManagement>
 		<system>GitHub</system>
-		<url>https://github.com/lectureStudio/MoodleSync/issues</url>
+		<url>https://github.com/MoodleSync/sync-app/issues</url>
 	</issueManagement>
 
 	<scm>
-		<connection>scm:git:git://github.com/lectureStudio/MoodleSync.git</connection>
-		<developerConnection>scm:git:ssh://git@github.com/lectureStudio/MoodleSync.git</developerConnection>
-		<url>https://github.com/lectureStudio/MoodleSync/tree/main</url>
+		<connection>scm:git:git://github.com/MoodleSync/sync-app.git</connection>
+		<developerConnection>scm:git:ssh://git@github.com/MoodleSync/sync-app.git</developerConnection>
+		<url>https://github.com/MoodleSync/sync-app/tree/main</url>
 	</scm>
 
 	<modules>
