Added better HTML-parsing, folder-download and view-options for folder-contents.

--- a/moodle-sync-fx/pom.xml
+++ b/moodle-sync-fx/pom.xml
@@ -161,7 +161,6 @@
 			<artifactId>log4j-core</artifactId>
 			<version>${log4j.version}</version>
 		</dependency>
-
 		<dependency>
 			<groupId>com.fasterxml.jackson.datatype</groupId>
 			<artifactId>jackson-datatype-jdk8</artifactId>
@@ -205,6 +204,12 @@
 					<artifactId>jakarta.activation</artifactId>
 				</exclusion>
 			</exclusions>
+		</dependency>
+		<dependency>
+			<!-- jsoup HTML parser library @ https://jsoup.org/ -->
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.17.1</version>
 		</dependency>
 	</dependencies>
 </project>
